tests/baselines/reference/higherKindedTypesThisFunctor.errors.txt
tests/cases/compiler/higherKindedTypesThisFunctor.ts(36,5): error TS2322: Type 'C<OldT>' is not assignable to type 'C<NewT>'.
  Type 'Functor<OldT>' is not assignable to type 'C<NewT>'.


==== tests/cases/compiler/higherKindedTypesThisFunctor.ts (1 errors) ====
    export interface Functor<A> {
        map<B>(f: (fa: A) => B): this<B>;
    }
    
    class MyArrayFunctor<El> implements Functor<El> {
        constructor(private elements: El[]) {};
    
        map<NewEl>(newf: (el: El) => NewEl): MyArrayFunctor<NewEl> {
            const newElements = this.elements.map(newf);
            return new MyArrayFunctor(newElements);
        }
    
        myMethod(): El {
            return this.elements[0];
        }
    }
    
    
    interface Foo {
        fooProp: string
    }
    
    interface Bar {
        barProp: string
    }
    
    function fooToBar(fooArg: Foo): Bar {
        return { barProp: fooArg.fooProp };
    }
    
    
    function convertAll<C<_T> extends
        Functor<_T>, OldT, NewT>
    (container: C<OldT>, convertFunc: (oldArg: OldT) => NewT): C<NewT> {
        const newContainer = container.map(convertFunc);
        return newContainer;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'C<OldT>' is not assignable to type 'C<NewT>'.
!!! error TS2322:   Type 'Functor<OldT>' is not assignable to type 'C<NewT>'.
    }